--- a/nomnoml.css
+++ b/nomnoml.css
@@ -37,6 +37,21 @@ textarea {
 	color: #657b83;
 	padding: 30px 0 0 40px;
 	resize: none;
+	transition: color 0.3s;
+}
+#textarea.hidden {
+	color: transparent;
+	transition: color 1s;
+}
+#canvas-panner {
+	position: absolute;
+	width: 33%;
+	height: 100%;
+	background: rgba(0,0,0,0);
+	top: 0;
+	right: 0;
+	bottom: 0;
+	cursor: move;
 }
 #linenumbers {
 	outline: none;
@@ -56,6 +71,7 @@ textarea {
 }
 #canvas {
 	position: absolute;
+	cursor: move
 }
 a, a:active {
 	color: #000;
