--- a/nomnoml.css
+++ b/nomnoml.css
@@ -1,6 +1,8 @@
 
 html, body {
 	height: 100%;
+    padding: 0;
+    margin: 0;
 	overflow-x: hidden;
 	overflow-y: hidden;
 	background: #fdf6e3;
@@ -17,8 +19,7 @@ h1 {
 }
 
 .wrap {
-	position: relative;
-	min-height: 100%;
+	height: 100%;
 }
 #linemarker {
 	background: rgba(220,50,47,0.5);
@@ -26,10 +27,6 @@ h1 {
 	left: 0;
 	width: 33px;
 	height: 22px
-}
-textarea {
-	line-height: 22px;
-	font-size: 16px;
 }
 #textarea {
 	outline: none;
@@ -43,14 +40,33 @@ textarea {
 	color: #657b83;
 	padding: 30px 0 0 40px;
 	resize: none;
-	transition: color 0.3s;
+	opacity: 1;
+	transition: opacity 0.3s;
 }
-#textarea.hidden {
-	color: transparent;
-	transition: color 1s;
+.CodeMirror {
+  height: 100%;
+  border: 0;
+  width: 100%;
+  padding: 22px 0 0 22px;
+  line-height: 25px;
+  font-size: 16px;
+  font-family: Consolas, Monaco, monospace;
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.CodeMirror .CodeMirror-linenumber.CodeMirror-gutter-elt{
+  color: #D4CEBD;
+  padding-left: 12px
+}
+
+.CodeMirror.hidden {
+	opacity: 0;
+	transition: opacity 1s;
 }
 #canvas-panner {
 	position: absolute;
+	z-index: 2;
 	width: 33%;
 	height: 100%;
 	background: rgba(0,0,0,0);
@@ -92,6 +108,7 @@ a:hover {
 .tools {
 	display: block;
 	position: absolute;
+	z-index: 3;
 	top: 20px;
 	right: 20px;
 	font-family: Calibri, Helvetica, sans-serif;
