linenumbers in CodeMirror editor

--- a/codemirror/theme/solarized.nomnoml.css
+++ b/codemirror/theme/solarized.nomnoml.css
@@ -135,7 +135,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 /* Light */
 .cm-s-solarized.cm-s-light .CodeMirror-gutters {
   color: #D4CEBD;
-  background-color: #EEE8D5;
+  background-color: transparent;
   border-color: #EEE8D5;
 }
 
