--- a/nomnoml.css
+++ b/nomnoml.css
@@ -25,6 +25,7 @@ h1 {
 	background: rgba(220,50,47,0.5);
 	position: absolute;
 	left: 0;
+	top: -30px;
 	width: 40px;
 	height: 22px;
 	z-index: 4;
