--- a/nomnoml.css
+++ b/nomnoml.css
@@ -17,6 +17,11 @@ h1 {
 	display: inline;
 	margin: 0;
 }
+img {
+    vertical-align: middle;
+    border: 0;
+}
+
 
 .wrap {
 	height: 100%;
@@ -107,7 +112,7 @@ a:hover {
 .tools {
 	display: block;
 	position: absolute;
-	z-index: 3;
+	z-index: 4;
 	top: 20px;
 	right: 20px;
 	font-family: Calibri, Helvetica, sans-serif;
@@ -173,6 +178,7 @@ a:hover {
 .sidebar {
 	display: none;
 	position: absolute;
+	z-index: 3;
 	top: 0px;
 	right:0;
 	bottom: 0;
