--- a/nomnoml.css
+++ b/nomnoml.css
@@ -174,6 +174,7 @@ a:hover {
 	top: 7px;
 	right: 0;
 	left: 0;
+	height: 1px;
 	text-align: center;
 }
 
@@ -213,6 +214,9 @@ a:hover {
 .hint svg {
 	display: block;
 	margin: 0 0 0 auto;
+}
+.hint.hidden {
+	display: none;
 }
 
 .sidebar {
