--- a/nomnoml.css
+++ b/nomnoml.css
@@ -132,7 +132,7 @@ a:hover img {
 	background: #fdf6e3;
 	border-radius: 5px;
 }
-.tools .canvas-tools {
+.canvas-tools {
 	display: block;
 	position: absolute;
 	top: 60px;
