--- a/nomnoml.css
+++ b/nomnoml.css
@@ -246,9 +246,9 @@ a:hover img {
 	font-family: Calibri, Helvetica, sans-serif
 }
 .content pre {
-  border-radius: 3px;
+  border-radius: 5px;
   background: #eee8d5;
-  padding: 5px;
+  padding: 8px;
   margin: 2px 0px;
   font-family: Consolas, Monaco, monospace;
   font-size: 14px;
@@ -256,16 +256,15 @@ a:hover img {
 .content h3{
 	display: block;
 	font-family: Calibri, Helvetica, sans-serif;
-	color: #93a1a1;
-	margin: 1em 0 0 0;
+	margin: 1.5em 0 0.5em 0;
 	font-size: inherit;
-	font-weight: normal;
+	color: #0008;
 }
 .content h2{
 	font-size: inherit;
 	display: block;
 	font-family: Calibri, Helvetica, sans-serif;
-	color: #93a1a1;
+	color: #0008;
 	margin: 1em -10px 10px -20px;
   border-bottom: 1px solid #0004;
   padding: 15px 0 7px 20px;
@@ -275,7 +274,7 @@ a:hover img {
 	font-weight: normal;
 	width: 40%;
 	font-family: Calibri, Helvetica, sans-serif;
-	color: #93a1a1;
+	color: #0008;
 }
 
 .content .btn .icon { margin-right: 6px; }
