--- a/nomnoml.css
+++ b/nomnoml.css
@@ -318,16 +318,15 @@ a:hover img {
   align-items: center;
   margin: 0 -10px 0 -20px;
   padding: 0 10px 0 0;
-  border-top: 1px solid #0002;
+  border-bottom: 1px solid #00000008;
   font-family: Calibri, Helvetica, sans-serif;
 }
-.file-entry:last-child { border-bottom: 1px solid #0002; }
 .file-entry.active { background: #0001; }
-.file-entry.indented { margin-left: 10px; border-left: 1px solid #0002; }
-.file-entry.indented a[href] { padding-left: 10px; }
+.file-entry.indented a[href] { padding-left: 46px; }
 .file-entry a[href] { display: block; padding: 8px 2px 8px 20px; }
 .file-entry:hover { background: rgba(0,0,0,0.07); }
-.file-entry.directory:hover { background: none; cursor: default; }
+.file-entry.directory:hover { background: none; }
+.file-entry.directory a { cursor: default; }
 .file-entry a:first-child { flex-grow: 1; }
 .file-entry i.icon svg { margin: -3px 5px -3px -3px; }
 
