comments only supported at the start of a line

--- a/codemirror/solarized.nomnoml.css
+++ b/codemirror/solarized.nomnoml.css
@@ -37,7 +37,7 @@ http://ethanschoonover.com/solarized
   text-shadow: none;
 }
 
-.cm-s-solarized .cm-keyword { color: #93a1a1; font-style: italic }
+.cm-s-solarized .cm-keyword { color: #b58900; }
 .cm-s-solarized .cm-atom { color: #d33682; }
 .cm-s-solarized .cm-number { color: #d33682; }
 .cm-s-solarized .cm-def { color: #2aa198; }
@@ -47,9 +47,9 @@ http://ethanschoonover.com/solarized
 .cm-s-solarized .cm-variable-3 { color: #6c71c4; }
 
 .cm-s-solarized .cm-property { color: #2aa198; }
-.cm-s-solarized .cm-operator {color: #657b83; }
+.cm-s-solarized .cm-operator {color: #b58900; }
 
-.cm-s-solarized .cm-comment { opacity: 0.5; }
+.cm-s-solarized .cm-comment { color: #859900; opacity: 0.5; font-style: italic }
 
 .cm-s-solarized .cm-string { color: #859900; }
 .cm-s-solarized .cm-string-2 { color: #b58900; }
@@ -57,7 +57,7 @@ http://ethanschoonover.com/solarized
 .cm-s-solarized .cm-meta { color: #b58900; }
 .cm-s-solarized .cm-qualifier { color: #b58900; }
 .cm-s-solarized .cm-builtin { color: #d33682; }
-.cm-s-solarized .cm-bracket { color: #657b83; }
+.cm-s-solarized .cm-bracket { color: #268bd2; }
 .cm-s-solarized .CodeMirror-matchingbracket { font-weight: bold; color: #000 !important }
 .cm-s-solarized .CodeMirror-nonmatchingbracket { color: #dc322f; }
 .cm-s-solarized .cm-tag { color: #93a1a1 }
